--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
         <title>LandingPage</title>
         <link rel="stylesheet" href="style.css">
     </head>
-
     <body>
+        <div class="header">
+            <div class="introtext">This website is awesome.</div>
+            <div class="headerlinks">
+                <ul>
+                    <li a href="">header link one</li>
+                    <li a href="">header link two</li>
+                    <li a href="">header link three</li>
+                </ul>
+            </div>
+        </div>
     </body>
 </html>
