--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     </head>
     <body>
         <div class="header">
-            <div class="introtext">This website is awesome.</div>
+            <div class="logo">Header Logo</div>
             <div class="headerlinks">
                 <ul>
-                    <li a href="">header link one</li>
-                    <li a href="">header link two</li>
-                    <li a href="">header link three</li>
+                    <li><a href="">header link one</a></li>
+                    <li><a href="">header link two</a></li>
+                    <li><a href="">header link three</a></li>
                 </ul>
             </div>
         </div>
