working on first container, details to be finished

--- a/index.html
+++ b/index.html
@@ -6,15 +6,23 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="header">
-            <div class="logo">Header Logo</div>
-            <div class="headerlinks">
-                <ul>
-                    <li><a href="">header link one</a></li>
-                    <li><a href="">header link two</a></li>
-                    <li><a href="">header link three</a></li>
-                </ul>
+            <div class="header">
+                <div class="logo">Header Logo</div>
+                <div class="headerlinks">
+                    <ul>
+                        <li><a href="">header link one</a></li>
+                        <li><a href="">header link two</a></li>
+                        <li><a href="">header link three</a></li>
+                    </ul>
+                </div>
             </div>
-        </div>
+            <div class="containerone">
+                <div class="leftgroup">
+                    <div class="lefttext">hello i am left text</div>
+                </div>
+                <div class="rightgroup">
+                    <div class="imagespot" id="textholder">here is a spot for a possible image</div>
+                </div>
+            </div>
     </body>
 </html>
