finished work on first container. set up framework for third and fourth

--- a/index.html
+++ b/index.html
@@ -18,11 +18,38 @@
             </div>
             <div class="containerone">
                 <div class="leftgroup">
-                    <div class="lefttext">hello i am left text</div>
+                    <div class="lefttext">
+
+                        <h1>This website is awesome</h1>
+
+                        <p>This area has some subtext that is a smaller font and contrast. This should be under the 
+                            main title, and wraps.</p>
+
+                        <button>Sign up</button>
+
+                    </div>
                 </div>
                 <div class="rightgroup">
-                    <div class="imagespot" id="textholder">here is a spot for a possible image</div>
+                    <div class="imagespot"><p>here is a spot for a possible image</p></div>
                 </div>
+            </div>
+
+            <div class="containertwo">
+                <h1>Some random information.</h1>
+
+                <div class="boxesimage">
+                    <p>IMG TEXT</p>
+
+                    <p>this is some subtext underneath the boxes</p>
+                </div>
+            </div>
+
+            <div class="containerthree">
+                <h1>heres some more text</h1>
+            </div>
+
+            <div class="containerfour">
+                <h1>heres some more text</h1>
             </div>
     </body>
 </html>
