added container 2 style

--- a/index.html
+++ b/index.html
@@ -35,12 +35,14 @@
             </div>
 
             <div class="containertwo">
-                <h1>Some random information.</h1>
+                <p id="informationtitle">Some random information.</p>
 
-                <div class="boxesimage">
-                    <p>IMG TEXT</p>
-
-                    <p>this is some subtext underneath the boxes</p>
+                <div class="boxescontainer">
+                    <div class="images"><p>This is some subtext underneath an illusion of an image.</p></div>
+                    <div class="images"><p>This is some subtext underneath an illusion of an image.</p></div>
+                    <div class="images"><p>This is some subtext underneath an illusion of an image.</p></div>
+                    <div class="images"><p>This is some subtext underneath an illusion of an image.</p></div>
+                </div>
                 </div>
             </div>
 
