container three finished

--- a/index.html
+++ b/index.html
@@ -47,7 +47,11 @@
             </div>
 
             <div class="containerthree">
-                <h1>heres some more text</h1>
+                <p id="quotemain">
+                <i>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling
+                        up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+                    </i></p>
+                <p id="signoff">- Thor, God of Thunder</p>
             </div>
 
             <div class="containerfour">
