--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </div>
                 </div>
                 <div class="rightgroup">
-                    <div class="imagespot"><p>here is a spot for a possible image</p></div>
+                    <div class="imagespot"><p>This is a placeholder for an image.</p></div>
                 </div>
             </div>
 
@@ -55,7 +55,15 @@
             </div>
 
             <div class="containerfour">
-                <h1>heres some more text</h1>
+                <div class="calltoaction">
+                    <p id="actiontitle">Call to action! It's time!</p>
+                    <p id="actiontext">Sign up for our product by hitting that button right over there!
+                    <button>Sign up</button></p>
+                </div>
+            </div>
+
+            <div class="footer">
+                <p>Copyright © The Odin Project 2021</p>
             </div>
     </body>
 </html>
